fix animation issue in firefox where app logo would stretch during closing animation

--- a/src/components/App.module.css
+++ b/src/components/App.module.css
@@ -7,7 +7,7 @@
 }
 
 .gifitButton {
-  font-size: 1em;
+  font-size: 0.8em;
   padding: 0;
   cursor: pointer;
   background: none;
